--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 				}
 			</script>
 		</div>
-		<script src="/coi-serviceworker.js" is:inline></script>
+		<script src="./coi-serviceworker.js" is:inline></script>
 	</body>
 </html>
