--- a/practice.html
+++ b/practice.html
@@ -2,7 +2,16 @@
 <html lang="en">
     <body>
         <textarea id="program"></textarea>
-        <button onclick="generateProgram()"> Cool Button</button>
+        <select name="template" id="template">
+            <option>Completly Random</option>
+            <option>Skip</option>
+            <option>Assign 1</option>
+            <option>Assign 2</option>
+            <option>If Statement 1</option>
+            <option>Loop 1</option>
+
+        </select>
+        <button onclick="generateTemplate()"> Cool Button</button>
     </body>
     <script type="text/javascript" src="tbd.js"></script>
 </html>
